Restore auto default button behavior

A style shouldn't mess with clients like this, especially
if it behaves different from literally any other QStyle out
there, and breaks decades of muscle memory.

This partially reverts 00693ee5e715167d61d0014b9eb75ab3dbd31b51

BUG: 438994